--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ button:hover {
     margin-bottom: 40px;
 }
 
-/* Weather outlook and Information panel should take two columns */
 .weather-outlook,
 .information-panel {
     grid-column: span 1;
@@ -48,7 +47,6 @@ button:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Today-Tomorrow section in two columns */
 .tm-weather {
     background-color: white;
     padding: 20px;
@@ -70,7 +68,6 @@ button:hover {
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Forecast table should take the full width of the grid (spanning both columns) */
 .forecast-table {
     background-color: white;
     padding: 20px;
@@ -79,7 +76,6 @@ button:hover {
     margin: 20px;
 }
 
-/* Weather Outlook styling */
 .weather-outlook {
     background-image: linear-gradient(rgba(32, 27, 27, 0.7), rgba(41, 41, 41, 0.7)),
         url("images/weather.svg");
@@ -91,8 +87,6 @@ button:hover {
 .weather-outlook h2 {
     margin-top: 0;
 }
-
-/* Table Styling for Better Interactivity and Responsiveness */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -124,33 +118,53 @@ tbody tr:nth-child(even) {
     background-color: #f1f1f1;
 }
 
-/* Add hover effects for better interactivity */
 td:hover {
     background-color: #d6eaf8;
     transition: background-color 0.3s ease;
 }
 
-/* Sortable columns (indicated with a pointer cursor and hover effect) */
 th.sortable:hover {
     background-color: #014f6d;
     color: #fff;
 }
 
-/* Sort arrow indicators for interactive sorting */
 th.sortable::after {
-    content: " \25b4 \25be"; /* Up and down arrows */
+    content: " \25b4 \25be";
     font-size: 0.8em;
     margin-left: 5px;
     display: inline-block;
 }
 
-/* Responsive Design for smaller screens */
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.spinner {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 @media screen and (max-width: 768px) {
     .content {
-        grid-template-columns: 1fr; /* Single column layout for smaller screens */
+        grid-template-columns: 1fr;
     }
 
-    /* Make table font smaller for better fit on small screens */
     th,
     td {
         font-size: 14px;
@@ -168,7 +182,6 @@ th.sortable::after {
     }
 }
 
-/* Further adjustments for very small screens */
 @media screen and (max-width: 500px) {
     input,
     button {
